# zero2prod-newsletter

./: Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-248e38e4c1809eb3226e6974ce26add72af25ad1ae2ef1d4ecf4fae189946a0f.json  query-751205e29e1bf46d7b27f07793a947a276f8c51b374685cd1b5138c1bdeee03c.json
configuration/: base.yaml  production.yaml
migrations/: 20240220005934_create_subscriptions_table.sql  20240227204011_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
